[gd_scene load_steps=11 format=2]

[ext_resource path="res://Personajes.gd" type="Script" id=1]
[ext_resource path="res://img/paises/England.png" type="Texture" id=2]
[ext_resource path="res://img/paises/Brazil.png" type="Texture" id=3]
[ext_resource path="res://img/paises/Sapin.png" type="Texture" id=4]
[ext_resource path="res://img/paises/Italy.png" type="Texture" id=5]
[ext_resource path="res://img/paises/Germany.png" type="Texture" id=6]
[ext_resource path="res://img/paises/Portugal.png" type="Texture" id=7]
[ext_resource path="res://img/paises/Japan.png" type="Texture" id=8]
[ext_resource path="res://img/paises/Netherlands.png" type="Texture" id=9]
[ext_resource path="res://img/Touch to Start-01.png" type="Texture" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 59.0
margin_top = 178.0
margin_right = 290.0
margin_bottom = 838.0
rect_scale = Vector2( 0.683963, 0.547083 )

[node name="Brasil" type="TextureButton" parent="GridContainer"]
margin_right = 231.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 3 )

[node name="Inglaterra" type="TextureButton" parent="GridContainer"]
margin_top = 166.0
margin_right = 231.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 2 )

[node name="Alemania" type="TextureButton" parent="GridContainer"]
margin_top = 332.0
margin_right = 231.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 6 )

[node name="Italia" type="TextureButton" parent="GridContainer"]
margin_top = 498.0
margin_right = 231.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 5 )

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 219.0
margin_top = 178.0
margin_right = 450.0
margin_bottom = 838.0
rect_scale = Vector2( 0.601333, 0.546178 )

[node name="Japon" type="TextureButton" parent="GridContainer2"]
margin_right = 231.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 8 )

[node name="Holanda" type="TextureButton" parent="GridContainer2"]
margin_top = 166.0
margin_right = 231.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 9 )

[node name="Portugal" type="TextureButton" parent="GridContainer2"]
margin_top = 332.0
margin_right = 231.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 7 )

[node name="Espana" type="TextureButton" parent="GridContainer2"]
margin_top = 498.0
margin_right = 231.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( -547, -75 )
texture_normal = ExtResource( 4 )

[node name="jugador" type="Sprite" parent="."]
position = Vector2( 685, 297 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 656.0
margin_top = 544.0
margin_right = 1286.0
margin_bottom = 614.0
rect_scale = Vector2( 0.545566, 0.525208 )
texture_normal = ExtResource( 10 )

[connection signal="pressed" from="GridContainer/Brasil" to="." method="_on_Brasil_pressed"]
[connection signal="pressed" from="GridContainer/Inglaterra" to="." method="_on_Inglaterra_pressed"]
[connection signal="pressed" from="GridContainer/Alemania" to="." method="_on_Alemania_pressed"]
[connection signal="pressed" from="GridContainer/Italia" to="." method="_on_Italia_pressed"]
[connection signal="pressed" from="GridContainer2/Japon" to="." method="_on_Japon_pressed"]
[connection signal="pressed" from="GridContainer2/Holanda" to="." method="_on_Holanda_pressed"]
[connection signal="pressed" from="GridContainer2/Portugal" to="." method="_on_Portugal_pressed"]
[connection signal="pressed" from="GridContainer2/Espana" to="." method="_on_Espana_pressed"]
